monitoring/05-grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
    - host: plg.akimovp.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kp-grafana
                port:
                  number: 80
